--- a/style.css
+++ b/style.css
@@ -35,15 +35,11 @@
 
 body {
     color: var(--color-typo);
-    background-color: var(--color-background);
+    background-color: #fff;
 
 }
 
  /* typos */ 
-
- main li {
-    list-style-type: circle;
- }
 
  html {
     font-size: var(--html-font-size);
@@ -54,6 +50,7 @@ body {
   font-size: 3.75rem;
   line-height: 108%;
   padding-bottom: 25px;
+  color: var(--color-accent-hard) !important;
   }
   h2 {
   display: inline;
@@ -103,7 +100,7 @@ body {
  }
 
 h1, h2, h3, h4, h5, h6 {
-    color: var(--color-accent-soft);
+    color: var(--color-typo);
     font-family: var(--heading-font);
     margin: 0px;
 }
@@ -215,8 +212,9 @@ button {
   .tips {
     border: 1px solid var(--color-accent-soft);
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px;
     color: var(--color-accent-soft);
+    margin-bottom: 25px;
   }
 
 .exercice {
@@ -232,5 +230,5 @@ button {
     border-radius: 15px;
     background: #1f2933;
     padding: 15px;
-    color: var(--color-accent-soft);
+    color: #fff;
   }
