--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .sous-wrapper {
@@ -231,4 +232,40 @@ button {
     background: #1f2933;
     padding: 15px;
     color: #fff;
+  }
+
+
+  /* accueil */ 
+
+  .accueil {
+    min-height: 100vh;
+    text-align: center;
+  }
+
+  .flex-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items:stretch;
+    gap: 25px;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .flex-box a {
+    padding: 25px;
+    flex-basis: 15%;
+    flex-grow: 1;
+    border: 1px solid var(--color-accent-soft);
+  }
+  
+  .title {
+    margin-top: 75px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--color-typo);
+    text-align: left;
+  }
+
+  .flex-box a:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    transform: scale(1.025);
   }
